@@ -16,3 +16,4 @@ Markus Thielen
 Fábio Santos
 Ahmet Emre Aladağ
 Robert Balfre
+John Bazik
