@@ -1,3 +1,8 @@
+2013-03-13  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Moved User instance creation to adapter so that e.g.
+	username generation can be influenced.
+
 2013-03-08  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Robert Balfre contributed Dropbox support, thanks!
